force-app/main/default/objects/VI_Parcours__c/fields/VI_LaveVaisselleElecSaisieConso__c.field-meta.xml
<CustomField>
    <fullName>VI_LaveVaisselleElecSaisieConso__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Le PP choisi, en fonction du prospect au téléphone ; le(s) type(s) d&apos;équipement(s) électroménager(s) utilisé(s) par le prospect</description>
    <label>Lave-vaisselle</label>
    <type>Checkbox</type>
</CustomField>