force-app/main/default/objects/VI_Parcours__c/fields/VI_LibelleOffrePanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_LibelleOffrePanierClient__c</fullName>
    <description>Champ pour affichage du nom de l&apos;offre</description>
    <label>Libellé de l’offre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>