force-app/main/default/objects/VI_Parcours__c/fields/VI_LibelleOptionGazPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_LibelleOptionGazPanierClient__c</fullName>
    <description>Champ pour affichage du nom de l&apos;option gaz</description>
    <label>Libellé de l&apos;option gaz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>