force-app/main/default/objects/VI_Parcours__c/fields/VI_LibelleOptionPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_LibelleOptionPanierClient__c</fullName>
    <description>Champ pour affichage du nom de l&apos;option elec</description>
    <label>Libellé de l&apos;option elec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>