force-app/main/default/objects/VI_Parcours__c/fields/VI_LibelleSurFacture2__c.field-meta.xml
<CustomField>
    <fullName>VI_LibelleSurFacture2__c</fullName>
    <label>Libelle Sur Facture	2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>