force-app/main/default/objects/VI_Parcours__c/fields/VI_LibelleSurFacture__c.field-meta.xml
<CustomField>
    <fullName>VI_LibelleSurFacture__c</fullName>
    <label>Libelle Sur Facture</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>