force-app/main/default/objects/VI_Parcours__c/fields/VI_LocalNonIdentifieGenerationCase__c.field-meta.xml
<CustomField>
    <fullName>VI_LocalNonIdentifieGenerationCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Création d&apos;un case si case cochée (true) pour identification du PDL/PCE par le back office.</description>
    <label>Local non identifié</label>
    <type>Checkbox</type>
</CustomField>