force-app/main/default/objects/VI_Parcours__c/fields/VI_MajStatutAbandon__c.field-meta.xml
<CustomField>
    <fullName>VI_MajStatutAbandon__c</fullName>
    <description>Date dernière maj du statut Abandon du Case</description>
    <label>Maj statut Abandon</label>
    <type>Date</type>
</CustomField>