force-app/main/default/objects/VI_Parcours__c/fields/VI_MajStatutAnnuleCase__c.field-meta.xml
<CustomField>
    <fullName>VI_MajStatutAnnuleCase__c</fullName>
    <description>Date dernière maj du statut Annulé du Case</description>
    <label>Maj statut Annulé</label>
    <type>Date</type>
</CustomField>