force-app/main/default/objects/VI_Parcours__c/fields/VI_MajStatutAtraiterBO__c.field-meta.xml
<CustomField>
    <fullName>VI_MajStatutAtraiterBO__c</fullName>
    <description>Date dernière maj du statut A traiter BO du Case</description>
    <label>Maj statut A traiter BO</label>
    <type>Date</type>
</CustomField>