force-app/main/default/objects/VI_Parcours__c/fields/VI_MajStatutCPVDelivrees__c.field-meta.xml
<CustomField>
    <fullName>VI_MajStatutCPVDelivrees__c</fullName>
    <description>Date dernière maj du statut CPV Délivrées du Case</description>
    <label>Maj statut CPV Délivrées</label>
    <type>Date</type>
</CustomField>