force-app/main/default/objects/VI_Parcours__c/fields/VI_MajStatutCPVEnvoyeesPDLPCEConnu__c.field-meta.xml
<CustomField>
    <fullName>VI_MajStatutCPVEnvoyeesPDLPCEConnu__c</fullName>
    <description>Date dernière maj du statut CPV Envoyées: PDL/PCE connu du Parcours</description>
    <label>Maj statut CPV Envoyées: PDL/PCE connu</label>
    <type>Date</type>
</CustomField>