force-app/main/default/objects/VI_Parcours__c/fields/VI_MajStatutCPVEnvoyeesPDLPCENonConnu__c.field-meta.xml
<CustomField>
    <fullName>VI_MajStatutCPVEnvoyeesPDLPCENonConnu__c</fullName>
    <description>Date dernière maj du statut CPV Envoyées: PDL/PCE non connu du Parcours</description>
    <label>Maj statut CPVEnvoyées:PDL/PCE non connu</label>
    <type>Date</type>
</CustomField>