force-app/main/default/objects/VI_Parcours__c/fields/VI_MajStatutCPVSignees__c.field-meta.xml
<CustomField>
    <fullName>VI_MajStatutCPVSignees__c</fullName>
    <description>Date dernière maj du statut CPV signées du Case</description>
    <label>Maj statut CPV Signées</label>
    <type>Date</type>
</CustomField>