force-app/main/default/objects/VI_Parcours__c/fields/VI_MajStatutEnTraitementBO__c.field-meta.xml
<CustomField>
    <fullName>VI_MajStatutEnTraitementBO__c</fullName>
    <description>Date dernière maj du statut En traitement BO du Case</description>
    <label>Maj statut En traitement BO</label>
    <type>Date</type>
</CustomField>