force-app/main/default/objects/VI_Parcours__c/fields/VI_MajStatutRetracte__c.field-meta.xml
<CustomField>
    <fullName>VI_MajStatutRetracte__c</fullName>
    <description>Date dernière maj du statut rétracté du Case</description>
    <label>Maj statut rétracté</label>
    <type>Date</type>
</CustomField>