force-app/main/default/objects/VI_Parcours__c/fields/VI_MajStatutVenteACompleterCase__c.field-meta.xml
<CustomField>
    <fullName>VI_MajStatutVenteACompleterCase__c</fullName>
    <description>Date dernière maj du statut Vente à compléter du Case</description>
    <label>Maj statut Vente à compléter Case</label>
    <type>Date</type>
</CustomField>