force-app/main/default/objects/VI_Parcours__c/fields/VI_MajStatutVenteACompleterParcours__c.field-meta.xml
<CustomField>
    <fullName>VI_MajStatutVenteACompleterParcours__c</fullName>
    <description>Date dernière maj du statut Vente à compléter du Parcours</description>
    <label>Maj statut Vente à compléter Parcours</label>
    <type>Date</type>
</CustomField>