force-app/main/default/objects/VI_Parcours__c/fields/VI_MajStatutVenteTransformee__c.field-meta.xml
<CustomField>
    <fullName>VI_MajStatutVenteTransformee__c</fullName>
    <description>Date dernière maj du statut Vente transformée du Case</description>
    <label>Maj statut Vente transformée</label>
    <type>Date</type>
</CustomField>