force-app/main/default/objects/VI_Parcours__c/fields/VI_MensualiteElecTTC__c.field-meta.xml
<CustomField>
    <fullName>VI_MensualiteElecTTC__c</fullName>
    <description>Prix total mensualité elec</description>
    <label>Mensualité elec TTC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>