force-app/main/default/objects/VI_Parcours__c/fields/VI_MensualiteGazTTC__c.field-meta.xml
<CustomField>
    <fullName>VI_MensualiteGazTTC__c</fullName>
    <description>Prix total mensualité gaz</description>
    <label>Mensualité gaz TTC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>