force-app/main/default/objects/VI_Parcours__c/fields/VI_Mobile1Client__c.field-meta.xml
<CustomField>
    <fullName>VI_Mobile1Client__c</fullName>
    <label>Téléphone portable 1</label>
    <type>Phone</type>
</CustomField>