force-app/main/default/objects/VI_Parcours__c/fields/VI_Mobile2Client__c.field-meta.xml
<CustomField>
    <fullName>VI_Mobile2Client__c</fullName>
    <label>Téléphone portable 2</label>
    <type>Phone</type>
</CustomField>