force-app/main/default/objects/VI_Parcours__c/fields/VI_MobilePrincipalCreationClient__c.field-meta.xml
<CustomField>
    <fullName>VI_MobilePrincipalCreationClient__c</fullName>
    <label>Téléphone portable principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile 1</fullName>
                <default>true</default>
                <label>Mobile 1</label>
            </value>
            <value>
                <fullName>Mobile 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>