force-app/main/default/objects/VI_Parcours__c/fields/VI_ModeDePaiementAF__c.field-meta.xml
<CustomField>
    <fullName>VI_ModeDePaiementAF__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mode de paiement</label>
    <type>Checkbox</type>
</CustomField>