force-app/main/default/objects/VI_Parcours__c/fields/VI_MONTANT_ABO_ELEC_ACH_TTC__c.field-meta.xml
<CustomField>
    <fullName>VI_MONTANT_ABO_ELEC_ACH_TTC__c</fullName>
    <label>Prix Abonnement acheminement</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>