force-app/main/default/objects/VI_Parcours__c/fields/VI_MontantApplique__c.field-meta.xml
<CustomField>
    <fullName>VI_MontantApplique__c</fullName>
    <description>Application code promotionnel</description>
    <label>Montant appliqué</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>