force-app/main/default/objects/VI_Parcours__c/fields/VI_MontantdelaMensualitePanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_MontantdelaMensualitePanierClient__c</fullName>
    <description>Champ pour l&apos;affichage du montant de la mensualité lors de l&apos;ajustement</description>
    <label>Montant de la mensualité</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>