force-app/main/default/objects/VI_Parcours__c/fields/VI_MontantOffrePanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_MontantOffrePanierClient__c</fullName>
    <description>Champ pour affichage du montant de l&apos;offre par mois</description>
    <label>Montant de l&apos;offre</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>