force-app/main/default/objects/VI_Parcours__c/fields/VI_MontantOptionPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_MontantOptionPanierClient__c</fullName>
    <description>Champ pour affichage du montant TTC de l&apos;option par mois</description>
    <label>Montant de l&apos;option</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>