force-app/main/default/objects/VI_Parcours__c/fields/VI_MotifAnnulationParcours__c.field-meta.xml
<CustomField>
    <fullName>VI_MotifAnnulationParcours__c</fullName>
    <label>Motif de l&apos;annulation du parcours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offre ENGIE en cours de souscription</fullName>
            </value>
            <value>
                <fullName>Offre ENGIE déjà souscrite</fullName>
            </value>
            <value>
                <fullName>Client injoignable</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Offre ENGIE en cours de souscription sur un autre canal</fullName>
                <isActive>false</isActive>
                <label>Offre ENGIE en cours de souscription sur un autre canal</label>
            </value>
            <value>
                <fullName>Offre(s) non éligible(s)</fullName>
                <isActive>false</isActive>
                <label>Offre(s) non éligible(s)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>