force-app/main/default/objects/VI_Parcours__c/fields/VI_NomAF__c.field-meta.xml
<CustomField>
    <fullName>VI_NomAF__c</fullName>
    <label>Nom</label>
    <length>30</length>
    <type>Text</type>
</CustomField>