force-app/main/default/objects/VI_Parcours__c/fields/VI_NomClient__c.field-meta.xml
<CustomField>
    <fullName>VI_NomClient__c</fullName>
    <description>Champ de création client</description>
    <label>Nom</label>
    <length>50</length>
    <type>Text</type>
</CustomField>