force-app/main/default/objects/VI_Parcours__c/fields/VI_NomClientExistant__c.field-meta.xml
<CustomField>
    <fullName>VI_NomClientExistant__c</fullName>
    <formula>VI_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom client existant</label>
    <type>Text</type>
</CustomField>