force-app/main/default/objects/VI_Parcours__c/fields/VI_NomCompletClientCPV__c.field-meta.xml
<CustomField>
    <fullName>VI_NomCompletClientCPV__c</fullName>
    <description>Champ pour afficher sur les CPV le nom complet du client qu&apos;il ait été crée comme nouveau client ou qu&apos;il ait été existant</description>
    <formula>(TEXT(VI_Contact__r.Salutation) +&quot; &quot;+ VI_Contact__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom complet client CPV</label>
    <type>Text</type>
</CustomField>