force-app/main/default/objects/VI_Parcours__c/fields/VI_NomDuSitePrestataireAppartenance__c.field-meta.xml
<CustomField>
    <fullName>VI_NomDuSitePrestataireAppartenance__c</fullName>
    <formula>Owner:User.Contact.VI_Site_Prestataire__r.Name</formula>
    <label>Nom du site / prestataire d&apos;appartenance</label>
    <type>Text</type>
</CustomField>