force-app/main/default/objects/VI_Parcours__c/fields/VI_NomPredecesseurRechercheLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_NomPredecesseurRechercheLocal__c</fullName>
    <description>Section champs complémentaires</description>
    <label>Nom du prédécesseur</label>
    <length>40</length>
    <type>Text</type>
</CustomField>