force-app/main/default/objects/VI_Parcours__c/fields/VI_NomPromotion2__c.field-meta.xml
<CustomField>
    <fullName>VI_NomPromotion2__c</fullName>
    <label>Nom de la Promotion 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>