force-app/main/default/objects/VI_Parcours__c/fields/VI_NomPromotion__c.field-meta.xml
<CustomField>
    <fullName>VI_NomPromotion__c</fullName>
    <label>Nom de la Promotion</label>
    <type>TextArea</type>
</CustomField>