force-app/main/default/objects/VI_Parcours__c/fields/VI_NomTitulaireMoyendePaiement__c.field-meta.xml
<CustomField>
    <fullName>VI_NomTitulaireMoyendePaiement__c</fullName>
    <description>Champ de saisie du nom du titulaire du moyen de paiement</description>
    <label>Nom du titulaire</label>
    <length>27</length>
    <type>Text</type>
</CustomField>