force-app/main/default/objects/VI_Parcours__c/fields/VI_Numero_de_la_rue__c.field-meta.xml
<CustomField>
    <fullName>VI_Numero_de_la_rue__c</fullName>
    <label>Numéro de la rue</label>
    <length>5</length>
    <type>Text</type>
</CustomField>