force-app/main/default/objects/VI_Parcours__c/fields/VI_NumeroAppartementRechercheLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_NumeroAppartementRechercheLocal__c</fullName>
    <description>Section champs complémentaires</description>
    <label>Numéro de l&apos;appartement</label>
    <length>5</length>
    <type>Text</type>
</CustomField>