force-app/main/default/objects/VI_Parcours__c/fields/VI_NumeroMatriculeGAZRechercheLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_NumeroMatriculeGAZRechercheLocal__c</fullName>
    <label>Matricule compteur GAZ</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>