force-app/main/default/objects/VI_Parcours__c/fields/VI_NumeroMatriculeRechercheLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_NumeroMatriculeRechercheLocal__c</fullName>
    <description>Section champs complémentaires</description>
    <label>Matricule compteur ELEC</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>