force-app/main/default/objects/VI_Parcours__c/fields/VI_NumeroRueRechercheLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_NumeroRueRechercheLocal__c</fullName>
    <description>Champ pour la recherche local par Adresse.</description>
    <label>Numéro de la rue</label>
    <length>5</length>
    <type>Text</type>
</CustomField>