force-app/main/default/objects/VI_Parcours__c/fields/VI_NumPromotion2__c.field-meta.xml
<CustomField>
    <fullName>VI_NumPromotion2__c</fullName>
    <label>Numéro de la Promotion	2</label>
    <type>TextArea</type>
</CustomField>