force-app/main/default/objects/VI_Parcours__c/fields/VI_NumPromotion__c.field-meta.xml
<CustomField>
    <fullName>VI_NumPromotion__c</fullName>
    <label>Numéro de la Promotion</label>
    <type>TextArea</type>
</CustomField>