force-app/main/default/objects/VI_Parcours__c/fields/VI_OffreChoisieElecPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_OffreChoisieElecPanierClient__c</fullName>
    <description>Champ pour sauvegarder l&apos;offre choisie Elec sur le parcours.</description>
    <label>Offre choisie (Elec)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>