force-app/main/default/objects/VI_Parcours__c/fields/VI_OffreChoisieGazPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_OffreChoisieGazPanierClient__c</fullName>
    <description>Champ pour sauvegarder l&apos;offre choisie Gaz sur le parcours.</description>
    <label>Offre choisie (Gaz)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>