force-app/main/default/objects/VI_Parcours__c/fields/VI_ParcoursDeSouscriptionAF__c.field-meta.xml
<CustomField>
    <fullName>VI_ParcoursDeSouscriptionAF__c</fullName>
    <label>Parcours de souscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Courrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>