force-app/main/default/objects/VI_Parcours__c/fields/VI_PartenaireRelieAuParcours__c.field-meta.xml
<CustomField>
    <fullName>VI_PartenaireRelieAuParcours__c</fullName>
    <formula>CreatedBy.Contact.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partenaire relié au parcours</label>
    <type>Text</type>
</CustomField>