force-app/main/default/objects/VI_Parcours__c/fields/VI_PaysNaissanceAF__c.field-meta.xml
<CustomField>
    <fullName>VI_PaysNaissanceAF__c</fullName>
    <label>Pays de naissance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>