force-app/main/default/objects/VI_Parcours__c/fields/VI_PCERechercheLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_PCERechercheLocal__c</fullName>
    <description>Champ de recherche local par PDL/PCE</description>
    <label>PCE</label>
    <length>14</length>
    <type>Text</type>
</CustomField>