force-app/main/default/objects/VI_Parcours__c/fields/VI_PlanifierTache__c.field-meta.xml
<CustomField>
    <fullName>VI_PlanifierTache__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Planification d&apos;un tâche possible en cas de reprise du parcours plus tard.</description>
    <label>Planifier une tâche</label>
    <type>Checkbox</type>
</CustomField>