force-app/main/default/objects/VI_Parcours__c/fields/VI_PrenomAF__c.field-meta.xml
<CustomField>
    <fullName>VI_PrenomAF__c</fullName>
    <label>Prénom</label>
    <length>30</length>
    <type>Text</type>
</CustomField>