force-app/main/default/objects/VI_Parcours__c/fields/VI_PrenomClient__c.field-meta.xml
<CustomField>
    <fullName>VI_PrenomClient__c</fullName>
    <description>Champ de recherche et création  client</description>
    <label>Prénom</label>
    <length>50</length>
    <type>Text</type>
</CustomField>