force-app/main/default/objects/VI_Parcours__c/fields/VI_PrenomClientExistant__c.field-meta.xml
<CustomField>
    <fullName>VI_PrenomClientExistant__c</fullName>
    <formula>VI_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prénom client Existant</label>
    <type>Text</type>
</CustomField>