force-app/main/default/objects/VI_Parcours__c/fields/VI_PrestatairesMarketshot__c.field-meta.xml
<CustomField>
    <fullName>VI_PrestatairesMarketshot__c</fullName>
    <label>Sites / Prestataires Marketshot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active contact</fullName>
            </value>
            <value>
                <fullName>ADM Value</fullName>
            </value>
            <value>
                <fullName>Webhelp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>