force-app/main/default/objects/VI_Parcours__c/fields/VI_PRIX_KWH_ELEC_ACH_HCbasse_HTT__c.field-meta.xml
<CustomField>
    <fullName>VI_PRIX_KWH_ELEC_ACH_HCbasse_HTT__c</fullName>
    <label>Prix abonnement acheminement HC basse HT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>