force-app/main/default/objects/VI_Parcours__c/fields/VI_PRIX_KWH_ELEC_ACH_TTC__c.field-meta.xml
<CustomField>
    <fullName>VI_PRIX_KWH_ELEC_ACH_TTC__c</fullName>
    <label>Prix kwh ACH Base</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>